# fixonce

./: .env.example  .gitignore  .prettierignore  Cargo.toml  Makefile  README.md  eslint.config.js  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.changeset/: initial-release.md  rename-shims.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
.husky/: pre-push
.sdd/memory/: constitution.md
apps/cli/: CHANGELOG.md  package.json
apps/hooks/: CHANGELOG.md  package.json  settings.example.json  tsconfig.json
apps/mcp-server/: CHANGELOG.md  package.json
apps/web/: CHANGELOG.md  index.html  package.json  tsconfig.json
crates/fixonce-cli/: Cargo.toml
crates/fixonce-cli/src/: main.rs  output.rs
crates/fixonce-cli/src/commands/: analyze.rs  auth.rs  config.rs  context.rs  create.rs  delete.rs  detect.rs  feedback.rs  get.rs  hook.rs  keys.rs  lineage.rs  login.rs  mod.rs  query.rs  update.rs
crates/fixonce-cli/src/tui/: app.rs  data.rs  mod.rs  tests.rs
crates/fixonce-cli/src/tui/views/: activity.rs  create_form.rs  dashboard.rs  health.rs  keys.rs  memory_detail.rs  memory_list.rs  mod.rs  search.rs  secrets.rs  splash.rs  too_small.rs
crates/fixonce-cli/src/tui/widgets/: heatmap.rs
crates/fixonce-core/: Cargo.toml
crates/fixonce-core/src/: error.rs  lib.rs
crates/fixonce-core/src/api/: client.rs  dashboard.rs  feedback.rs  memories.rs  mod.rs  search.rs  secrets.rs
crates/fixonce-core/src/auth/: challenge.rs  keypair.rs  mod.rs  oauth.rs  token.rs
crates/fixonce-core/src/detect/: context.rs  midnight.rs  mod.rs
crates/fixonce-core/src/embeddings/: mod.rs  voyage.rs
crates/fixonce-core/src/memory/: contradictions.rs  dynamics.rs  lineage.rs  metadata.rs  mod.rs  provenance.rs  signatures.rs  types.rs
crates/fixonce-core/src/output/: json.rs  mod.rs  text.rs  toon.rs
crates/fixonce-core/src/pipeline/: claude.rs  mod.rs
crates/fixonce-core/src/pipeline/read/: mod.rs  pipeline_runner.rs  query_techniques.rs  result_refinement.rs  search_modes.rs
crates/fixonce-core/src/pipeline/write/: credential_check.rs  dedup.rs  enrichment.rs  mod.rs  quality_gate.rs
crates/fixonce-core/tests/: bench_hot_cache.rs  e2e_auth_flow.rs  e2e_detection.rs  e2e_dynamics.rs  e2e_memory_lifecycle.rs  e2e_write_pipeline.rs
crates/fixonce-hooks/: Cargo.toml
crates/fixonce-hooks/src/: lib.rs  post_tool_use.rs  pre_tool_use.rs  session_start.rs  stop.rs  user_prompt.rs
discovery/: OPEN_QUESTIONS.md  OPEN_QUESTIONS.md.backup  SPEC.md  STATE.md  STATE.md.backup
discovery/archive/: DECISIONS.md  DECISIONS.md.backup  ITERATIONS.md  RESEARCH.md  REVISIONS.md
docs/ideas/: 2026-03-04-fixonce-vision.md  2026-03-23-fixonce-v2-vision.md
docs/plans/: enforce-code-quality.md
hooks/: post-tool-use.sh  pre-tool-use.sh  session-start.sh  stop.sh  user-prompt-submit.sh
shims/fixonce/: CHANGELOG.md  package.json
shims/fixonce-mcp/: CHANGELOG.md  bin.js  package.json
shims/fixonce-web/: CHANGELOG.md  package.json
supabase/: README.md  config.toml
(+102 files in other folders)
