[package]
name = "fixonce-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fixonce"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
fixonce-core = { path = "../fixonce-core" }
fixonce-hooks = { path = "../fixonce-hooks" }
hex = "0.4.3"
ratatui = "0.29"
sentry = { version = "0.37", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls", "tracing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
