[package]
name = "fixonce-core"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4.3"
indicatif = "0.17"
dirs = "6"
open = "5.3.3"
rand = "0.9"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
serial_test = "3.4"

[lints]
workspace = true
