[package]
name = "fixonce-hooks"
version = "0.1.0"
edition = "2021"

[dependencies]
fixonce-core = { path = "../fixonce-core" }
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serial_test = "3.4"
base64 = "0.22"

[lints]
workspace = true
